# gp_compressor

./: CMakeLists.txt  README.md
matlab/: sogp.m
ndt/: test_ndt_accuracy.cpp  voxel_grid_covariance.hpp
src/: asynch_visualizer.cpp  asynch_visualizer.h  dictionary_representation.cpp  dictionary_representation.h  gaussian_noise.cpp  gaussian_noise.h  gaussian_noise_3d.cpp  gaussian_noise_3d.h  gaussian_process.cpp  gaussian_process.h  gp_compressor.cpp  gp_compressor.h  gp_leaf.cpp  gp_leaf.h  gp_mapping.cpp  gp_mapping.h  gp_mapping_node.cpp  gp_octree.cpp  gp_octree.h  gp_registration.cpp  gp_registration.h  ksvd_decomposition.cpp  ksvd_decomposition.h  octave_convenience.cpp  orthogonal_matching_pursuit.cpp  orthogonal_matching_pursuit.h  pointcloud_compressor.cpp  pointcloud_compressor.h  pointcloud_decompressor.cpp  pointcloud_decompressor.h  probit_noise.cpp  rbf_kernel.cpp  rbf_kernel.h  sparse_gp.cpp  sparse_gp.h  sparse_gp.hpp  sparse_gp_field.h  sparse_gp_field.hpp  test_compress.cpp  test_decompress.cpp  (+5 more)
