project(gp_compressor)

set(CMAKE_CXX_FLAGS "-O4 -g -fPIC -std=c++0x")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

set(PCL_DIR "/opt/ros/groovy/share/pcl-1.6")
find_package(PCL 1.6 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

# MAIN LIBRARY
add_library(pointcloud_compressor src/pointcloud_compressor.cpp)
add_library(gp_compressor src/sparse_gp.h src/sparse_gp.hpp src/sparse_gp_field.h src/sparse_gp_field.hpp src/gp_compressor.cpp)
add_library(pointcloud_decompressor src/pointcloud_decompressor.cpp)
add_library(orthogonal_matching_pursuit src/orthogonal_matching_pursuit.cpp)
add_library(ksvd_decomposition src/ksvd_decomposition.cpp)
add_library(dictionary_representation src/dictionary_representation.cpp)
add_library(gaussian_process src/gaussian_process.cpp)
add_library(gp_leaf src/gp_leaf.cpp)
add_library(gp_octree src/gp_octree.cpp)
add_library(gp_registration src/gp_registration.cpp)
add_library(gp_mapping src/gp_mapping.cpp)
add_library(asynch_visualizer src/asynch_visualizer.cpp)
add_library(rbf_kernel src/rbf_kernel.cpp)
add_library(gaussian_noise src/gaussian_noise.cpp)
add_library(gaussian_noise_3d src/gaussian_noise_3d.cpp)
add_library(probit_noise src/probit_noise.cpp)
add_library(octave_convenience src/octave_convenience.cpp)
add_executable(test_compress src/test_compress.cpp)
add_executable(test_gp_compress src/test_gp_compress.cpp)
add_executable(test_gp_registration src/test_gp_registration.cpp)
add_executable(test_gp_mapping src/test_gp_mapping.cpp)
add_executable(test_gp_mapping_no_vis src/test_gp_mapping_no_vis.cpp)
add_executable(test_decompress src/test_decompress.cpp)
add_executable(test_gp_accuracy src/test_gp_accuracy.cpp)

target_link_libraries(gp_octree gp_leaf ${PCL_LIBRARIES})
target_link_libraries(dictionary_representation ${PCL_LIBRARIES})
target_link_libraries(ksvd_decomposition orthogonal_matching_pursuit)
target_link_libraries(asynch_visualizer ${PCL_LIBRARIES})
target_link_libraries(gp_compressor octave_convenience rbf_kernel gaussian_noise gaussian_noise_3d probit_noise gp_octree gaussian_process ${PCL_LIBRARIES})
target_link_libraries(gp_registration gp_compressor asynch_visualizer ${PCL_LIBRARIES})
target_link_libraries(gp_mapping gp_registration ${PCL_LIBRARIES})
target_link_libraries(pointcloud_compressor ksvd_decomposition dictionary_representation ${PCL_LIBRARIES})
target_link_libraries(pointcloud_decompressor dictionary_representation ${PCL_LIBRARIES})
target_link_libraries(test_compress pointcloud_compressor ${PCL_LIBRARIES})
target_link_libraries(test_gp_compress gp_compressor ${PCL_LIBRARIES})
target_link_libraries(test_gp_registration gp_registration ${PCL_LIBRARIES})
target_link_libraries(test_gp_mapping gp_mapping ${PCL_LIBRARIES})
target_link_libraries(test_gp_mapping_no_vis gp_mapping ${PCL_LIBRARIES})
target_link_libraries(test_gp_accuracy gp_registration asynch_visualizer octave_convenience ${PCL_LIBRARIES})
target_link_libraries(test_decompress pointcloud_decompressor ${PCL_LIBRARIES})

# NDT LIBRARY
add_library(voxel_grid_covariance ndt/voxel_grid_covariance.cpp)
add_executable(test_ndt_accuracy ndt/test_ndt_accuracy.cpp)

target_link_libraries(test_ndt_accuracy voxel_grid_covariance octave_convenience ${PCL_LIBRARIES})
